create docker compose

--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -1,10 +1,14 @@
 APScheduler==3.6.3
-cachetools==4.2.2
-certifi==2025.1.31
-python-telegram-bot==13.15
-pytz==2025.1
-setuptools==75.8.0
-six==1.17.0
-tornado==6.1
-tzlocal==5.2
-urllib3==2.3.0
+cachetools
+certifi
+python-telegram-bot
+pytz
+setuptools
+six
+tornado
+tzlocal
+urllib3
+
+python-telegram-bot==13.7
+requests==2.31.0
+python-dotenv==1.0.0
