--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -13,21 +13,20 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '18'
-        
-    - name: Install frontend dependencies
-      working-directory: ./frontend
-      run: npm install
-      
-    - name: Build frontend
-      working-directory: ./frontend
-      run: npm run build
-    
-   
-      
-   
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
+      - name: Install frontend dependencies
+        working-directory: frontend
+        run: npm install
+
+      - name: Build frontend
+        working-directory: frontend
+        run: npm run build
