--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -11,7 +11,7 @@ on:
       - develop
 
 jobs:
-  build:
+  build-frontend:
     runs-on: ubuntu-latest
 
     steps:
@@ -30,3 +30,27 @@ jobs:
       - name: Build frontend
         working-directory: frontend
         run: npm run build
+
+  test-backend:
+    runs-on: ubuntu-latest
+    needs: build-frontend   # опционально, если хочешь запускать тесты после билда фронта
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Install backend dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run backend tests
+        run: |
+          # тут команда запуска тестов
+          # например, для Django:
+          python manage.py test
